[package]
name = "kvs"
version = "0.1.0"
authors = ["chen ganshen <cgs931219@outlook.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
failure = "0.1.5"
serde = {version="1.0.99", features = ["derive"] }
serde_json = "1.0.40"
structopt = "0.3.1"
log = "0.4.8"
simplelog = "0.8.0"
sled = "0.32.0"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
crossbeam-utils = "0.6.5"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
panic-control = "0.1.4"

[[bench]]
name = "benches"
harness = false